--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,12 +23,12 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      
-      [Ejemplos](./ejemplos.html).
-      [Codigo](./codigo.html).
-      [Labs](./labs.html).
-      [GitHub](https://github.com/HuemulSolutions/Bigdata-Governance).
-      [Gratis!](./precios.html).
+      <a href="ejemplos.html">Ejemplos</a>
+      <a href="codigo.html">Codigo</a>
+      <a href="labs.html">Labs</a>
+      <a href="precios.html">Gratis!</a>
+      <a href="https://github.com/HuemulSolutions/Bigdata-Governance">GitHub</a>
+     
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.show_downloads %}
