--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
-    <header class="page-header" role="banner">
+    <header class="page-header" style="padding:0px;font-size: 32px" role="banner">
       <a href="ejemplos.html">Ejemplos</a>
       <a href="codigo.html">Codigo</a>
       <a href="labs.html">Labs</a>
