--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
         <a href="codigo.html" class="btn">Codigo</a>
         <a href="documentacion.html" class="btn">Documentación</a>
         <a href="template.html" class="btn">Template</a>
-        <a href="https://github.com/HuemulSolutions/Bigdata-Governance">GitHub</a>
+        <a href="https://github.com/HuemulSolutions/Bigdata-Governance" class="btn">GitHub</a>
       {% endif %}
       
     </header>
