--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,8 @@
 ---
 ---
 
+$header-color: #0086b3;
+$header-text-align: left;
+$header-background-color: #1c77d5;
+$header-background-image: linear-gradient(1deg, #155799, #f7f7f7);
 @import 'jekyll-theme-cayman';
