--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 $header-bg-color: #0086b3;
-$header-bg-text-align: left;
+$header-text-align: left;
 $header-bg-color: #1c77d5;
 $header-bg-image: linear-gradient(1deg, #155799, #f7f7f7);
 @import 'jekyll-theme-cayman';
