--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,8 +8,8 @@ $header-bg-color: #159957 !default;
 $header-bg-color-secondary: #155799 !default;
 
 // Text
-$section-headings-color: #159957 !default;
-$body-text-color: #1c77d5 !default;
+$section-headings-color: #1c77d5 !default;
+$body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 
