--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 
     <header class="page-header" style="padding:0px;" role="banner">
       
-      <div style="position: relative;width: 100%;max-width: 1024px;margin: 0 auto;padding: 0 15px;backgroud:white">
-        <div style="float:left">
+      <div style="width: 100%;height: 50px;margin: 0 auto;padding: 0 15px;background-color:white">
+        <div style="">
           <img src="/Huemul_Logo_v3.png">
         </div>
       </div>
