--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       
       <div style="width: 100%;height: 50px;margin: 0 auto;padding: 0 15px;background-color:white">
         <div style="">
-          <img src="/Huemul_Logo_v3.png">
+          <img src="/Huemul_Logo_v3.png" style="height: 50px;">
         </div>
       </div>
 
