--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 
     <header class="page-header" style="padding:0px;" role="banner">
       
-      <div style="width: 100%;height: 50px;margin: 0 auto;padding: 0 15px;background-color:white">
+      <div style="width: 100%;height: 50px;margin: 0 auto;padding: 0 15px;background-color:white;text-align: left;">
         <div style="">
           <img src="/Huemul_Logo_v3.png" style="height: 50px;">
         </div>
